--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "es6-promise": "^4.1.1",
+    "foundation-sites": "^6.4.4-rc1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   }
