--- a/client/package.json
+++ b/client/package.json
@@ -15,19 +15,26 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.6.0",
     "sass-loader": "^6.0.6",
+    "script-loader": "^0.7.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "es6-promise": "^4.1.1",
     "foundation-sites": "^6.4.4-rc1",
+    "jquery": "^3.2.1",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-burger-menu": "^2.1.10",
+    "react-dom": "^16.0.0",
+    "react-foundation": "^0.9.2"
   }
 }
