--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -25,6 +26,7 @@
     "sass-loader": "^6.0.6",
     "script-loader": "^0.7.2",
     "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1"
   },
   "dependencies": {
@@ -35,6 +37,8 @@
     "react": "^16.0.0",
     "react-burger-menu": "^2.1.10",
     "react-dom": "^16.0.0",
-    "react-foundation": "^0.9.2"
+    "react-foundation": "^0.9.2",
+    "react-keydown": "^1.9.5",
+    "react-notifications": "^1.4.3"
   }
 }
